change 5 - styling on cta in header

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -828,9 +828,19 @@ p {
   font-size: 15px;
   font-weight: 600;
   font-family: 'Barlow', sans-serif;
-  color: #ee2d24;
+  color: #fff;
+  background-color: #ee2d24;
+  border: 1px solid #ee2d24;
+  padding: 10px 20px;
   text-transform: uppercase;
   margin-left: 70px;
+  transition: all 0.4s ease-out 0s;
+}
+
+.header-banner .banner-content .banner-contact:hover {
+  color: #ee2d24;
+  box-shadow: 0px 5px 16px 0px rgb(235 54 86 / 65%);
+  background-color: #fff;
 }
 .header-banner .banner-content .banner-contact::before {
   position: absolute;
